WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75086
Crash when typing a data: URL containing double-quotes in MiniBrowser on Windows
https://bugs.webkit.org/show_bug.cgi?id=75086
Summary
Crash when typing a data: URL containing double-quotes in MiniBrowser on Windows
Adam Roben (:aroben)
Reported
2011-12-22 06:55:48 PST
Crash when typing a data: URL containing double-quotes in MiniBrowser on Windows
Attachments
Patch
(1.79 KB, patch)
2011-12-22 06:56 PST
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-12-22 06:56:13 PST
Created
attachment 120318
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-10 12:24:05 PST
Comment on
attachment 120318
[details]
Patch Clearing flags on attachment: 120318 Committed
r104615
: <
http://trac.webkit.org/changeset/104615
>
WebKit Review Bot
Comment 3
2012-01-10 12:24:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug