Make MiniBrowser automatically escape invalid URL characters typed in its URL field

Fixes <http://webkit.org/b/75086> Crash when typing a data: URL containing double-quotes in
MiniBrowser on Windows

Reviewed by Darin Adler.

* MiniBrowser/win/BrowserView.cpp:
(BrowserView::goToURL): Pass the typed string through
CFURLCreateStringByAddingPercentEscapes before trying to create a URL from it.


Canonical link: https://commits.webkit.org/92792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104615 268f45cc-cd09-0410-ab3c-d52691b4dbfc